--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="Prakash1.jpg" alt="Your Profile Picture" class="profile-picture">
-            <h1>Prakash C</h1>
+            <img src="prakash1.jpg" alt="Your Profile Picture" class="profile-picture">
+            <h1>prakash C</h1>
             <p>Am Computer Science Student</p>
         </div>
     </header>
@@ -158,7 +158,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="Prakash.jpg" target="_blank" class="download-button">Download CV</a>
+            <a href="prakash.jpg" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
